# Clavis

./: .gitignore  CHANGELOG.md  Clavis.cabal  LICENSE  README.md  flake.nix
app/: Main.hs
src/: Formatter.hs  Json.hs  Keycodes.hs  Layout.hs  Protocol.hs  Types.hs
test/: FormatterSpec.hs  KeycodesSpec.hs  LayoutSpec.hs  ProtocolSpec.hs
